# uw-saml-python

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: create-release.yml  pull-request.yml
scripts/: pre-push.sh
tests/: samlresponse.txt  test_auth.py  test_federated.py  test_mock.py
uw_saml/: VERSION  sp.py
uw_saml/idp/: attribute.py  uw.py
uw_saml2/: __init__.py  auth.py  mock.py  python3_saml.py  sp.py
uw_saml2/django/: middleware.py  urls.py  views.py
uw_saml2/idp/: __init__.py  attribute.py  federated.py  uw.py
