[tool.poetry]
name = "uw-saml"
version = "1.2.1"
description = "A UW-specific adapter to the python3-saml package."
authors = []
license = "Apache 2.0"
packages = [
    { include = 'uw_saml2' }
]

[tool.poetry.dependencies]
python = "^3.7"
python3-saml = {version = "^1.14.0", optional = true}
Werkzeug = "^2.0.2"
cachelib = "^0.4.1"
onelogin = "^2.0.3"

[tool.poetry.extras]
python3-saml = ['python3-saml']

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.9b0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
